# two-minds-one-world

./: .dockerignore  .gitignore  Dockerfile.agent  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt  runner.py  test.py
agents/: context.py  loop.py  memory.py  orchestrator.py  service.py  stimulus.py  tasks.py
agents/prompts/: reflect.md  session_start.md  system.md
config/: clients.py  settings.py
data/agents/agent_a/: constitution.md
data/agents/agent_a/workspace/: 20260302_155630_world_diary_code.py  IDENTITY.md  TODO.md  health_log.md  test.py
data/agents/agent_b/: constitution.md
data/agents/agent_b/workspace/: 20260302_155020_initialize_world_diary.py  20260302_155026_world_diary_code.py  20260302_155625_world_diary_code.py  20260302_160430_persistent_counter.py  20260302_160437_run_counter_inc.py  20260302_160822_shared_counter_log_update.py  (+13 more)
data/agents/devon/: constitution.md
data/agents/jordan/: constitution.md
data/agents/marcus/: constitution.md
data/agents/priya/: constitution.md
data/agents/zoe/: constitution.md
db/: budget.py  events.py  messages.py  models.py  schema.sql
executor/: Dockerfile  Dockerfile.sandbox  main.py  models.py  prepare.py  run.py  seccomp.json
executor/prepare/: prepare_code.py
scripts/: git-sync.sh  reset.sh
tools/: artifacts.py  board.py  browser.py  budget.py  code.py  file_operations.py  github.py  journal.py  registry.py  self_tools.py  tickets.py  web.py  world.py
world/: tasks.py  world_main.py
world/god/: artifacts.py  events.py  injector.py  main.py  runner.py  scores.py
(+17 files in other folders)
