[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "two-minds-one-world"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "db*", "worker*", "config*"]
